# cairo-fuzzer

./: .gitignore  .gitmodules  Cargo.toml  Makefile
src/: main.rs
src/cli/: args.rs  config.rs
src/fuzzer/: cairo_worker.rs  corpus_input.rs  dict.rs  fuzzer.rs  mod.rs  starknet_worker.rs
src/json/: json_parser.rs
src/mutator/: mutator.rs
src/runner/: cairo_runner.rs  mod.rs  starknet_runner.rs
