[package]
name = 'cairo-fuzzer'
version = '0.1.1'
edition = '2021'

[dependencies]
chrono = '0.4.19'
rand = '0.8.5'
serde_json = '1.0'
serde = '*'
log = '*'
thiserror = '1.0.32'
num-traits = '0.2.15'

[dependencies.felt]
path = "./lib/cairo-vm/felt/"
package = 'cairo-felt'

[dependencies.cairo-rs]
path = "./lib/cairo-vm/vm/"
package = 'cairo-vm'

[dependencies.num-bigint]
version = '0.4'
features = ['serde']

[dependencies.clap]
version = ' 4.1.16'
features = ['derive']
